--- a/docs/site-historic.texi
+++ b/docs/site-historic.texi
@@ -19,10 +19,11 @@ the actually selected logo, we also got a number of other interesting
 submissions, which can still be found on the
 @uref{beast-doc://logo-submissions/,,logo submissions} page.
 
-Finally, here's a collection of articles related to BEAST:
+Finally, here's a collection of past articles related to BEAST:
 @itemize
 @item @uref{http://www.linuxjournal.com/article.php?sid=4349,About the Mod}
 @item @uref{http://www.kuro5hin.org/story/2002/6/8/2524/90038,Trackers and Linux}
+@item @uref{http://www.fosdem.org/index/interviews/interviews_steiner,Interview with Jakub 'Jimmac' Steiner}
 @end itemize
 
 @bye
