--- a/docs/site-links-synthesis.texi
+++ b/docs/site-links-synthesis.texi
@@ -76,6 +76,7 @@ Selected @uref{http://www.sospubs.co.uk,,Sound On Sound} Articles:
 	@uref{http://www.sospubs.co.uk/sos/may02/articles/synthsecrets0502.asp,,Part37}
 	@uref{http://www.sospubs.co.uk/sos/jun02/articles/synthsecrets0602.asp,,Part38}
 	@uref{http://www.sospubs.co.uk/sos/jul02/articles/synthsecrets0702.asp,,Part39}
+	@uref{http://www.sospubs.co.uk/sos/aug02/articles/synthsecrets0802.asp,,Part40}
 @end itemize
 
 
