--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb  6 22:49:01 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstmain.c (main): fix GtkObject user_data wihch is broken in
+	gtk+2.2.
+
 Thu Feb  6 20:08:02 2003  Tim Janik  <timj@gtk.org>
 
 	* acbeast.m4: remove -freg-struct-return from CFLAGS and CXXFLAGS,
