allow NULL as signal name.
Tue Feb 11 03:10:19 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/gxk/gxkutils.c (gxk_signal_handler_pending): allow NULL as
        signal name.

        * beast-gtk/gxk/gxkutils.c: allow tree columns to be reordered.

svn path=/trunk/; revision=882

--- a/TODO
+++ b/TODO
@@ -58,11 +58,11 @@ DOCS:
   Re: uref macro, document font Date: Thu, 5 Dec 2002 00:23:38 +0200
 - fix black backgrounds in logo contest thumbnails
   (occours on entries with alpha channel) [alper]
-- keep old news item links working after the site move (e.g. docs/cvs-news.html)
 - adjust overall brightness of the site [alper]
 - in development docs, make function names in descriptions links to
   apropriate functions [alper]
 - function docs constants (e.g. %NULL) aren't marked up in cyan in .markup output [alper]
+- the beast site is unusable under IE [alper]
 
 GSL:
 * sample loader currently hard codes 440.0 for osc_freq
