--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Feb 11 03:10:19 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkutils.c (gxk_signal_handler_pending): allow NULL as
+	signal name.
+
+	* beast-gtk/gxk/gxkutils.c: allow tree columns to be reordered.
+
 Mon Feb 10 23:54:43 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bsttrackroll.[hc]: supply drag data with information
